Fixed hover on footer, Not sure what you mean by a horizontal scroll bar kicking in.

--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,9 @@ footer{
 
 
 
+.fcl:hover{
+  color: black;
+}
 
 .fcl{
   display: inline-block;
